<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/ten_dp"
              android:paddingRight="@dimen/ten_dp"
              android:paddingBottom="@dimen/ten_dp"
              android:paddingEnd="@dimen/ten_dp">

                <TextView
                    android:id="@+id/question_statement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:scrollbars="horizontal"/>

                <TextView
                    android:id="@+id/option_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/first_option"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/first_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:scrollbars="horizontal"/>

                <TextView
                    android:id="@+id/option_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/second_option"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/second_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:scrollbars="horizontal"/>

                <TextView
                    android:id="@+id/option_third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/third_option"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/third_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:scrollbars="horizontal"/>

                <TextView
                    android:id="@+id/option_fourth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/fourth_option"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/fourth_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:scrollbars="horizontal"/>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="SUBMIT"
                    android:visibility="visible" />

        </LinearLayout>
</ScrollView>